@@ -664,8 +664,8 @@
         <webpage>http://ll10nt.laka.lv/</webpage>
     </team>
 
-    <team id="lim">
-        <_language code="lim">Limburgian</_language><!-- FIXME: Limburgish or Limburgian??? -->
+    <team id="li">
+        <_language code="li">Limburgian</_language><!-- FIXME: Limburgish or Limburgian??? -->
 
         <coordinator>
             <name>Kenneth Rohde Christiansen</name>
@@ -822,6 +822,8 @@
 
     <team id="no">
         <_language code="no">Norwegian</_language>
+        <_language code="nb">Norwegian Bokmål</_language>
+        <_language code="nn">Norwegian Nynorsk</_language>
 
         <coordinator>
             <name>Kjartan Maraas</name>
